git add . git commit -m "final commit" git push origin master

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <i class="fa fa-spinner fa-spin fa-5x text-white"></i>
   </div> -->
   <section class="home bg-black min-vh-100">
-    <nav class="min-vh-100 position-fixed d-flex">
+    <nav class="min-vh-100 position-fixed d-flex ">
 
       <div class="navBody text-white p-4 d-flex flex-column justify-content-between">
         <div class="list overflow-hidden">
@@ -65,7 +65,7 @@
       <div class="d-none container w-75" id="searchContainer">
 
       </div>
-      <div class="container">
+      <div class="container m-auto ">
         <div class="row " id="rowData">
           <div
             class="loading-screen position-fixed top-0 start-0 end-0 bottom-0 bg-black d-flex justify-content-center align-items-center">
